--- a/Netflix_Project.ipynb
+++ b/Netflix_Project.ipynb
@@ -1433,12 +1433,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64847bab",
+   "cell_type": "markdown",
+   "id": "ab06364c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# <p style=\"background-color:Black;font-family:newtimeroman;font-size:150%;color:#E50914;text-align:center;border-radius:20px 20px;\"><b>---The End---</b></p>"
+   ]
   }
  ],
  "metadata": {
